# test_task_secunda

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5fa_initial_payments_and_outbox.py
backend/src/: main.py
backend/src/core/: constants.py  logging.py  settings.py
backend/src/core/infrastructure/: __init__.py
backend/src/core/infrastructure/messaging/: __init__.py  consumer_app.py  retry_ack.py
backend/src/db/: session.py
backend/src/payments/api/: deps.py  router.py  schemas.py
backend/src/payments/application/: create_payment.py  get_payment.py  process_payment_message.py
backend/src/payments/application/use_cases/: create_payment.py  get_payment.py  process_payment_message.py
backend/src/payments/consumer/: app.py  cli.py  handlers.py
backend/src/payments/domain/: entities.py  repositories.py
backend/src/payments/domain/dtos/: create_payment.py
backend/src/payments/domain/exceptions/: idempotency.py
backend/src/payments/domain/interfaces/: repositories.py
backend/src/payments/infrastructure/: gateway_emulator.py  outbox.py  outbox_relay.py  outbox_sqlalchemy.py  webhook_client.py
backend/src/payments/infrastructure/messaging/: rabbit_setup.py  topology.py
backend/src/payments/infrastructure/workers/: app.py  (+2 more)
backend/src/payments/outbox_relay/: __init__.py  cli.py
backend/src/payments/presentation/: dependencies.py
(+4 files in other folders)
