[project]
name = "payment-processing-backend"
version = "0.1.0"
description = "Async payment processing service (FastAPI, PostgreSQL, RabbitMQ)"
requires-python = ">=3.11"
dependencies = [
  "aio-pika>=9,<10",
  "alembic>=1.13.0",
  "fastapi>=0.115.0",
  "faststream[rabbit]>=0.5",
  "httpx>=0.27",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
  "uvicorn[standard]>=0.30",
]

[project.scripts]
payment-consumer = "payments.consumer.cli:main"
payment-outbox-relay = "payments.outbox_relay.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
